Reduced min length for search input to 1

--- a/templates/my_quizzes.html
+++ b/templates/my_quizzes.html
@@ -6,8 +6,8 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="fas fa-question prefix light-blue-text text-darken-4"></i>
-                <input id="quizSearch" name="quizSearch" type="text" minlength="2" value="" class="validate">
-                <label class="truncate" for="quizSearch" data-error="Please Enter at least 2 Characters." data-default="Search My Quizzes">Search My Quizzes</label>
+                <input id="quizSearch" name="quizSearch" type="text" minlength="1" value="" class="validate">
+                <label class="truncate" for="quizSearch" data-error="Please Enter at least 1 Character." data-default="Search My Quizzes">Search My Quizzes</label>
             </div>
         </div>
         <div class="row">
