--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -27,7 +27,7 @@
                         <!-- Quiz Name -->
                         <span class="card-title col s12 hide-on-extra-large-only">Provide a Title for your Quiz</span>
                         <div class="input-field col s12 xl7">
-                            <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" class="validate" value="" required>
+                            <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" class="validate" value="New Quiz" required>
                             <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                                         <!-- Round Name -->
                                         <span class="title col s12 hide-on-extra-large-only">Provide a Title for this Round</span>
                                         <div class="input-field col s12 xl7">
-                                            <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="25" class="validate" value="Round 1" required>
+                                            <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="100" class="validate" value="Round 1" required>
                                             <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
                                         </div>
                                         <span class="title col s12">Create Questions for this Round</span>
@@ -118,7 +118,7 @@
                                                             <div class="answers-container col s12">
                                                                 <div class="input-field col s12">
                                                                     <span class="prefix" data-question="1" data-multi="0"></span>
-                                                                    <input id="answer_1_1" name="answer_1_1" type="text" minlength="5" maxlength="255" class="validate" value="" required>
+                                                                    <input id="answer_1_1" name="answer_1_1" type="text" minlength="1" maxlength="255" class="validate" value="" required>
                                                                     <label for="answer_1_1" data-error="Invalid Answer" data-default="Answer 1">Answer 1</label>
                                                                 </div>
                                                                 <!-- Optional Image URL -->
