--- a/templates/quiz_search.html
+++ b/templates/quiz_search.html
@@ -13,9 +13,9 @@
         <div class="row">
             <!-- quiz category selection -->
             <div class="input-field col s12 select-container">
-                <i id="quizCategoryIcon" class="prefix light-blue-text text-darken-4 fas"></i>
+                <i id="quizCategoryIcon" class="prefix light-blue-text text-darken-4 fas fa-asterisk"></i>
                 <select id="quizCategory" name="quizCategory">
-                    <optgroup label='<div class="subopt"><i class="fas fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">All</span></div>'>
+                    <optgroup label='<div class="subopt"><i class="fas fa-asterisk fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">All</span></div>'>
                         <option>All</option>
                     </optgroup>
                     {% for category in categories %}
@@ -55,5 +55,6 @@
     <script>
         // Convert mongoDB data to JS global array for use in this template
         let categoryList = createCategoryArray({{ categories | tojson }});
+        categoryList.unshift({'category': 'All', 'category_icon': 'fa-asterisk'})
     </script>
 {% endblock %}
