--- a/templates/quiz_search.html
+++ b/templates/quiz_search.html
@@ -5,7 +5,7 @@
         <!-- quiz search-->
         <div class="row">
             <div class="input-field col s12">
-                <i class="fas fa-question prefix light-blue-text text-darken-4"></i>
+                <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
                 <input id="quizSearch" name="quizSearch" type="text" minlength="1" value="" class="validate">
                 <label class="truncate" for="quizSearch" data-error="Please Enter at least 1 Character." data-default="Search Quizzes">Search Quizzes</label>
             </div>
