--- a/templates/my_quizzes.html
+++ b/templates/my_quizzes.html
@@ -1,5 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
+    <!-- Modal Structure -->
+    <div id="dupTitleModal" class="modal">
+        <div class="modal-content">
+            <!-- title and close button -->
+            <div class="modal-title-row row">
+                <div class="col s11">
+                    <h4 id="modalTitle">Duplicate Quiz Title</h4>
+                </div>
+                <div class="col s1 modal-close-button">
+                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                </div>
+            </div>
+            <!-- quiz title -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="" required>
+                    <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
+                </div>
+            </div>
+            <!-- save changes -->
+            <div class="row modal-action-container">
+                <button id="modalSubmitButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
+                    Save Changes <i class="fas fa-user-check"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main Content -->
     <h3 class="light-blue-text text-darken-4 center-align">My Quizzes</h3>
     <div class="quiz-search container">
         <!-- quiz search-->
@@ -51,6 +80,7 @@
 {% endblock%}
 
 {% block scripts %}
+    <script src="{{ url_for('static', filename='js/copyquiz.js') }}"></script>
     <script src="{{ url_for('static', filename='js/quizlist.js') }}"></script>
     <script>
         // Convert mongoDB data to JS global array for use in this template
