--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -1,7 +1,48 @@
 {% extends "base.html" %}
 {% block content %}
+    <!-- Modal Structure -->
+    <div id="dupTitleModal" class="modal">
+        <div class="modal-content">
+            <!-- title and close button -->
+            <div class="modal-title-row row">
+                <div class="col s11">
+                    <h4 id="modalTitle">Duplicate Quiz Title</h4>
+                </div>
+                <div class="col s1 modal-close-button">
+                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                </div>
+            </div>
+            <!-- quiz title -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="{{ viewQuiz.title }}" required>
+                    <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
+                </div>
+            </div>
+            <!-- save changes -->
+            <div class="row modal-action-container">
+                <button id="modalSubmitButton" data-quizId="{{ viewQuiz._id }}" class="col s12 btn-large light-blue darken-4 text-shadow">
+                    Save Changes <i class="fas fa-user-check"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main Content -->
     <div id="viewQuiz" class="container">
-        <h3 class="light-blue-text text-darken-4 center-align">{{ viewQuiz.title }}</h3>
+        <div class="row">
+            <div class="col s1"></div>
+            <div class="col s10">
+                <h3 id="quizOriginalTitle" class="light-blue-text text-darken-4 center-align">{{ viewQuiz.title }}</h3>
+            </div>
+            <div class="col s1">
+                <h3 class="right-align">
+                    <a class="light-blue-text text-darken-4 copy-quiz" href="#!">
+                        <i class="fas fa-copy fa-fw"></i>
+                    </a>
+                </h3>
+            </div>
+        </div>
         <div class="divider"></div>
         <h4 class="light-blue-text text-darken-4 center-align"><i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i>{{ viewQuiz.category }}</h4>
         <div class="divider"></div>
@@ -67,5 +108,6 @@
     </div>
 {% endblock %}
 {% block scripts %}
+    <script src="{{ url_for('static', filename='js/copyquiz.js') }}"></script>
     <script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
 {% endblock %}
