--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -1,6 +1,53 @@
 {% extends "base.html" %}
 {% block content %}
-    <h3 class="light-blue-text text-darken-4 center-align">Edit a Quiz</h3>
+    <!-- Modal Structure -->
+    <div id="changeConfModal" class="modal">
+        <div class="modal-content">
+            <!-- title and close button -->
+            <div class="modal-title-row row">
+                <div class="col s11">
+                    <h4 id="modalTitle"></h4>
+                </div>
+                <div class="col s1 modal-close-button">
+                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <h5 id="modalMessage"></h5>
+                </div>
+            </div>
+            <!-- save changes -->
+            <div class="row modal-action-container">
+                <div class="col s6"></div>
+                <div class="col s3">
+                    <button id="modalYesButton" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        Yes <i class="fas fa-check"></i>
+                    </button>
+                </div>
+                <div class="col s3">
+                    <button id="modalNoButton" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        No <i class="fas fa-times"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main Content -->
+    <div class="row container">
+        <div class="col s1"></div>
+        <div class="col s10">
+            <h3 class="light-blue-text text-darken-4 center-align">Edit a Quiz</h3>
+        </div>
+        <div class="col s1">
+            <h3 class="right-align">
+                <a id="cancelEdit" class="light-blue-text text-darken-4" href="{{ cancel_edit }}">
+                    <i class="fas fa-times fa-fw"></i>
+                </a>
+            </h3>
+        </div>
+    </div>
     <div id="editQuiz" class="container">
         <form id="editQuizForm" method="post">
             <!-- Prevent Submission of Form on Enter Keypress -->
