--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -13,8 +13,8 @@
 <body>
     <main id="viewQuiz" class="container">
         <h3 class="light-blue-text text-darken-4 center-align">{{ viewQuiz.title }}</h3>
-        <div class="divider"></div>
-        <h4 class="light-blue-text text-darken-4 center-align"><i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i>{{ viewQuiz.category }}</h4>
+        <h5 class="light-blue-text text-darken-4 center-align">By: {{ viewQuiz.author }}</h5>
+        <h5 class="light-blue-text text-darken-4 center-align">Category: <i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i> {{ viewQuiz.category }}</h5>
         <div class="divider"></div>
         <div class="quiz-container page-break-after-avoid">
             {% for round in viewQuiz.rounds %}
@@ -38,7 +38,22 @@
                         </h6>
                         {% if question.question_img_url != '' %}
                             <div class="center-align">
-                                <img class="quiz-image hidden inline-block" src="{{ question.question_img_url }}">
+                                <img id="img_q_{{ round.round_num }}_{{ question.question_num }}" class="quiz-image hidden inline-block" src="">
+                                <div class="preloader-container">
+                                    <div class="preloader-wrapper big active">
+                                        <div class="spinner-layer">
+                                            <div class="circle-clipper left">
+                                                <div class="circle"></div>
+                                            </div>
+                                            <div class="gap-patch">
+                                                <div class="circle"></div>
+                                            </div>
+                                            <div class="circle-clipper right">
+                                                <div class="circle"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                         {% endif %}
@@ -49,7 +64,22 @@
                                 </h6>
                                 {% if option.answer_img_url != '' %}
                                     <div class="center-align">
-                                        <img class="quiz-image hidden" src="{{ option.answer_img_url }}">
+                                        <img id="img_o_{{ round.round_num }}_{{ question.question_num }}_{{ option.option_num }}" class="quiz-image hidden" src="">
+                                        <div class="preloader-container">
+                                            <div class="preloader-wrapper big active">
+                                                <div class="spinner-layer">
+                                                    <div class="circle-clipper left">
+                                                        <div class="circle"></div>
+                                                    </div>
+                                                    <div class="gap-patch">
+                                                        <div class="circle"></div>
+                                                    </div>
+                                                    <div class="circle-clipper right">
+                                                        <div class="circle"></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 {% endif %}
                             {% endfor %}
@@ -64,5 +94,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-<script src="{{ url_for('static', filename='js/xhttp.js') }}"></script>
 <script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
+<script>
+    $(function() {
+        loadImg({{ viewQuiz.rounds | tojson }});
+    });
+</script>
