--- a/templates/quiz_search.html
+++ b/templates/quiz_search.html
@@ -6,10 +6,10 @@
             <!-- title and close button -->
             <div class="modal-title-row row">
                 <div class="col s11">
-                    <h4 id="modalTitle">Duplicate Quiz Title</h4>
+                    <h4>Duplicate Quiz Title</h4>
                 </div>
                 <div class="col s1 modal-close-button">
-                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                    <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
                 </div>
             </div>
             <!-- quiz title -->
@@ -24,6 +24,39 @@
                 <button id="modalSubmitButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
                     Save Changes <i class="fas fa-user-check"></i>
                 </button>
+            </div>
+        </div>
+    </div>
+
+    <div id="changeConfModal" class="modal">
+        <div class="modal-content">
+            <!-- title and close button -->
+            <div class="modal-title-row row">
+                <div class="col s11">
+                    <h4 id="modalTitle"></h4>
+                </div>
+                <div class="col s1 modal-close-button">
+                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12">
+                    <h5 id="modalMessage"></h5>
+                </div>
+            </div>
+            <!-- save changes -->
+            <div class="row modal-action-container">
+                <div class="col s6"></div>
+                <div class="col s3">
+                    <button id="modalYesButton" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        Yes <i class="fas fa-check"></i>
+                    </button>
+                </div>
+                <div class="col s3">
+                    <button id="modalNoButton" class="col s12 btn-large light-blue darken-4 text-shadow">
+                        No <i class="fas fa-times"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
