--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -6,22 +6,22 @@
             <!-- title and close button -->
             <div class="modal-title-row row">
                 <div class="col s11">
-                    <h4 id="modalTitle">Duplicate Quiz Title</h4>
+                    <h4>Duplicate Quiz Title</h4>
                 </div>
                 <div class="col s1 modal-close-button">
-                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#">&times</a>
+                    <a class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
                 </div>
             </div>
             <!-- quiz title -->
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="{{ viewQuiz.title }}" required>
+                    <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="100" value="" required>
                     <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
                 </div>
             </div>
             <!-- save changes -->
             <div class="row modal-action-container">
-                <button id="modalSubmitButton" data-quizId="{{ viewQuiz._id }}" class="col s12 btn-large light-blue darken-4 text-shadow">
+                <button id="modalSubmitButton" data-quizId="" class="col s12 btn-large light-blue darken-4 text-shadow">
                     Save Changes <i class="fas fa-user-check"></i>
                 </button>
             </div>
