--- a/templates/base.html
+++ b/templates/base.html
@@ -20,20 +20,15 @@
             <a href="#" class="nav-title">Pimp My Quiz!</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
+                {% if not session.user %}
+                    <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
+                {% endif %}
                 {% if session.user %}
+                    <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
                     <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
                     <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
-                    {% if session.user_role == "global admin" %}
-                        <ul id="nav-admin-dropdown" class="dropdown-content">
-                            <li><a href="{{ url_for('admin_users') }}">Users</a></li>
-                            <li><a href="#!">Content</a></li>
-                        </ul>
-                        <li><a class="dropdown-trigger" href="#!" data-target="nav-admin-dropdown">Admin<i class="fas fa-caret-down"></i></a></li>
-                    {% elif session.user_role == "user account admin" %}
+                    {% if session.user_role == "global admin" or session.user_role == "user account admin" %}
                         <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
-                    {% elif session.user_role == "content admin" %}
-                        <li><a href="#!">Content Admin</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log Out</a></li>
                 {% else %}
@@ -47,20 +42,15 @@
         <!-- mobile sidenav -->
         <ul class="sidenav" id="mobile-demo">
             <li><h4 class="center-align light-blue-text text-darken-4">Pimp My Quiz!</h4></li>
-            <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
+            {% if not session.user %}
+                <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
+            {% endif %}
             {% if session.user %}
+                <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
                 <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
                 <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
-                {% if session.user_role|lower == "global admin"|lower %}
-                    <ul id="sidenav-admin-dropdown" class="dropdown-content">
-                        <li><a href="{{ url_for('admin_users') }}">Users</a></li>
-                        <li><a href="#!">Content</a></li>
-                    </ul>
-                    <li><a class="dropdown-trigger" href="#!" data-target="sidenav-admin-dropdown">Admin<i class="fas fa-caret-down"></i></a></li>
-                {% elif session.user_role == "user account admin" %}
+                {% if session.user_role == "global admin" or session.user_role == "user account admin" %}
                     <li><a href="{{ url_for('admin_users') }}">User Admin</a></li>
-                {% elif session.user_role == "content admin" %}
-                    <li><a href="#!">Content Admin</a></li>
                 {% endif %}
                 <li><a href="{{ url_for('logout') }}">Log Out</a></li>
             {% else %}
