added .lower() to viewQuiz.category test

--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -27,7 +27,7 @@
                         {% endif %}
                             Round {{ round.round_num }}
                             <p>
-                                {% if viewQuiz.category == 'general knowledge' %}
+                                {% if viewQuiz.category.lower() == 'general knowledge' %}
                                     <i class="fas {{ round.category_icon.class }} fa-fw"></i>
                                 {% endif %}
                                 {{ round.title }}
