--- a/templates/my_quizzes.html
+++ b/templates/my_quizzes.html
@@ -98,13 +98,13 @@
     </div>
     <div id="quizCollection" class="container">
         <div class="results-control hidden">
-            <a href="#" class="results-control-first">First</a>
-            <a href="#" class="results-control-prev">Prev</a>
+            <a href="#" class="results-control-first"><i class="fas fa-angle-double-left fa-fw tooltipped light-blue-text text-darken-4" data-position="bottom" data-tooltip="First"></i></a>
+            <a href="#" class="results-control-prev"><i class="fas fa-angle-left fa-fw tooltipped light-blue-text text-darken-4" data-position="bottom" data-tooltip="Previous"></i></a>
             <input class="pageNumber browser-default" name="pageNumber" type="text" minlength="1" maxlength="4" pattern="^[0-9]{1,4}$" value="1">
-            <span>of</span>
-            <span class="totalPages"></span>
-            <a href="#" class="results-control-next">Next</a>
-            <a href="#" class="results-control-last">Last</a>
+            <span class="light-blue-text text-darken-4">of</span>
+            <span class="totalPages light-blue-text text-darken-4"></span>
+            <a href="#" class="results-control-next"><i class="fas fa-angle-right fa-fw tooltipped light-blue-text text-darken-4" data-position="bottom" data-tooltip="Next"></i></a>
+            <a href="#" class="results-control-last"><i class="fas fa-angle-double-right fa-fw tooltipped light-blue-text text-darken-4" data-position="bottom" data-tooltip="Last"></i></a>
         </div>
         <div id="quizSearchResults" class="results-data">
             <!--returned records go here-->
