--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -1,48 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    <!-- Modal Structure -->
-    <div id="changeConfModal" class="modal">
-        <div class="modal-content">
-            <!-- title and close button -->
-            <div class="modal-title-row row">
-                <div class="col s11">
-                    <h5 id="modalTitle"></h5>
-                </div>
-                <div class="col s1 modal-close-button">
-                    <a id="modalClose" class="modal-action modal-close light-blue-text text-darken-4" href="#!">&times</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <h6 id="modalMessage"></h6>
-                </div>
-            </div>
-            <!-- save changes -->
-            <div class="row modal-action-container">
-                <div class="col s6"></div>
-                <div class="col s3">
-                    <button id="modalYesButton" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        Yes <i class="fas fa-check"></i>
-                    </button>
-                </div>
-                <div class="col s3">
-                    <button id="modalNoButton" class="col s12 btn-large light-blue darken-4 text-shadow">
-                        No <i class="fas fa-times"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Main Content -->
-    <div class="row container">
+    <div id="titleRow" class="row container">
         <div class="col s2"></div>
-        <div class="col s8">
-            <h3 class="light-blue-text text-darken-4 center-align">Edit a Quiz</h3>
+        <div class="col s8 center-align">
+            <h3 class="light-blue-text text-darken-4">Edit a Quiz</h3>
         </div>
-        <div class="col s2">
-            <h3 class="right-align">
-                <a id="cancelEdit" class="light-blue-text text-darken-4" href="{{ cancel_edit }}">
+        <div class="col s2 right-align">
+            <h3>
+                <a id="cancelUrl" class="light-blue-text text-darken-4 tooltipped" data-position="bottom" data-tooltip="Cancel" href="{{ cancel_url }}">
                     <i class="fas fa-times fa-fw"></i>
                 </a>
             </h3>
@@ -50,10 +16,10 @@
     </div>
     <div id="editQuiz" class="container">
         <form id="editQuizForm" method="post">
-            <input id="cancelEditUrl" name="cancel_edit" type="text" class="hidden" value={{ cancel_edit }}>
             <!-- Prevent Submission of Form on Enter Keypress -->
             <!-- https://stackoverflow.com/questions/895171/prevent-users-from-submitting-a-form-by-hitting-enter/51507806#51507806 -->
             <button class="hidden" type="submit" disabled></button>
+            <input name="cancel_url" type="text" class="hidden" value={{ cancel_url }}>
             <!-- Form Content -->
             <div class="card">
                 <div class="card-content">
@@ -257,6 +223,7 @@
         </form>
     </div>
 {% endblock%}
+
 {% block scripts %}
     <script src="{{ url_for('static', filename='js/newquizlisteners.js') }}"></script>
     <script src="{{ url_for('static', filename='js/newquiz.js') }}"></script>
